# cmd/api-dictionaries/main.go
@@ -37,9 +37,10 @@ func main() {
 				EnableRequestLogging: true,
 			},
 			map[string]api.HandleFunc{
-				"GET /v1/dictionaries":    handleGet,
-				"POST /v1/dictionaries":   handlePost,
-				"DELETE /v1/dictionaries": handleDelete,
+				"getDictionariesV1":            handleGet,
+				"postDictionariesV1":           handlePost,
+				"deleteDictionariesV1":         handleDelete,
+				"patchStatisticDictionariesV1": handlePatchStatistic,
 			},
 		).Handle,
 	)
