# cmd/api-subcategories/main.go
@@ -37,9 +37,9 @@ func main() {
 				EnableRequestLogging: true,
 			},
 			map[string]api.HandleFunc{
-				"GET /v1/subcategories":    handleGet,
-				"POST /v1/subcategories":   handlePost,
-				"DELETE /v1/subcategories": handleDelete,
+				"getSubcategoriesV1":    handleGet,
+				"postSubcategoriesV1":   handlePost,
+				"deleteSubcategoriesV1": handleDelete,
 			},
 		).Handle,
 	)
