# cmd/api-urls/main.go
@@ -40,7 +40,7 @@ func main() {
 				EnableRequestLogging: true,
 			},
 			map[string]api.HandleFunc{
-				"POST /v1/urls": handlePost,
+				"postUrlsV1": handlePost,
 			},
 		).Handle,
 	)
